[tool.poetry]
name = "wodscript"
version = "0.1.0"
description = "Dependcy manager for this project"
authors = ["Jose Guerrero <jose.guerrero10@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^228"
selenium = "^3.141.0"
slack = "^0.0.2"
slackclient = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
